[tool.poetry]
name = "play-with-markers"
version = "0.1.0"
description = ""
authors = ["Alan Florendo <alan.florendo@wwt.com>"]
readme = "README.md"
packages = [{include = "play_with_markers"}]

[tool.poetry.dependencies]
python = [
    { markers = "platform_machine == 'aarch64'", version = "3.11.4"},
    { markers = "platform_machine != 'aarch64'", version = "3.8.16"}
    ]
tensorflow = [
    { markers = "platform_machine == 'aarch64'", version = "2.12.0"},
    { markers = "platform_machine != 'aarch64'", version = "2.9.0"}
    ]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
